# Real-Time-ai-weatherapp

./: .gitignore  README.md
services/docker-compose/: redpanda.yml
services/weather_forecast/: Makefile  pyproject.toml
services/weather_forecast/src/: llm.py  main.py
services/weather_llm/: Makefile  pyproject.toml
services/weather_llm/src/: main.py
services/weather_producer/: .cache.sqlite  Makefile  pyproject.toml  setup_daily_config.sh  setup_hourly_config.sh  setup_weekly_config.sh
services/weather_producer/src/: config.py  main.py  open_weather_api.py
