[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["jorge <jorgepadres789@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.2.10"
langchain-core = "^0.2.26"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
